Fixed drag on mobile (maybe)

--- a/apps/next-app/src/styles/globals.css
+++ b/apps/next-app/src/styles/globals.css
@@ -5,7 +5,6 @@
 Canvas {
   background: transparent;
   position: absolute;
-  touch-action: none;
   top: 0;
   left: 0;
   width: 100%;
